# bilibilidownloadtool

./: .gitignore  BilibiliDownloader.spec  README.md  _patch_nuitka.py  _patch_pyinstaller_util.py  api_config.json  api_request.py  app.manifest  app_config.json  app_config.py  audio_parser.py  audio_tab.py  bilibili_downloader.spec  bilibili_parser.py  build.py  build_installer_patched.py  build_mac.sh  build_main.py  build_main_patched.py  build_uninstaller_patched.py  cert_installer.py  clean_temp.py  cli.py  cloud_service.py  config.py  cookie.txt  download_history.py  downloader.py  emoji_parser.py  emoji_tab.py  env_checker.py  error_codes.py  icon_manager.py  installer.py  live_parser.py  live_tab.py  logger_config.py  macOS_README.txt  main.py  network_utils.py  (+25 more)
.github/workflows/: Build.yml  build-mac.yml  macos-test.yml  windows-test.yml
mac_adapter/: _fix_nuitka_tracing.py  api_request.py  app.manifest  bilibili_parser.py  cloud_service.py  downloader.py  env_checker.py  logger_config.py  my_cert.cer  pack_helper.py  platform_utils.py  task_manager.py  tool_manager.py  ui.py  version_info.json  version_info_installer.txt  wbi_sign.py
mpv/: mpv.com
